[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convergence_logger"
version = "0.1.1"
description = "A python package to monitor the convergence of ML algorithms."
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE.txt"]
keywords = [
    "machine-learning",
    "convergence",
    "plotting",
    "statistics",
    "monitoring",
]
authors = [{ name = "Joao Hespanha", email = "hespanha@ece.ucsb.edu" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = ["numpy>=1.26", "matplotlib"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]                    # Scans for packages in the "." directory
include = ["convergence_logger"] # Only includes packages matching this pattern
exclude = ["*.tests"]            # Excludes test packages
namespaces = true                # Enables implicit namespace packages (default behavior)
